helm/manifests/admin-bff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-bff-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-bff
  template:
    metadata:
      labels:
        app: admin-bff
    spec:
      serviceAccountName: hacmieu-sa
      containers:
        - name: admin-bff
          image: caophi562005/vshop-admin-bff:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3300
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
