helm/manifests/admin-bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-bff
spec:
  type: ClusterIP
  selector:
    app: admin-bff
  ports:
    - protocol: TCP
      port: 3300
      targetPort: 3300
